Enhance resources UX and class scope
